--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.40.0",
+    "cors": "^2.8.5",
     "crypto-token": "^1.0.1",
     "express": "^4.19.2",
     "nodemailer": "^6.9.13",
